--- a/app/views/admin/index.slim
+++ b/app/views/admin/index.slim
@@ -1,3 +1,10 @@
+- if @location
+  javascript:
+    window.location_name = "#{@location.name}";
+- else
+  javascript:
+    window.location_name = null;
+
 script(src='https://js.stripe.com/v3/')
 
 javascript:
