detail key pair refactor

--- a/app/assets/stylesheets/basecoat/_base.sass
+++ b/app/assets/stylesheets/basecoat/_base.sass
@@ -185,6 +185,9 @@ div
 .margin-left-sm
   margin-left: $margin-sm
 
+.margin-left-default
+  margin-left: $margin-default
+
 .margin-right-default
   margin-right: $margin-default
 
