--- a/app/assets/stylesheets/components/_table.sass
+++ b/app/assets/stylesheets/components/_table.sass
@@ -7,6 +7,14 @@
   text-align: left
   font-weight: 400
 
+  td:first-of-type,
+  th:first-of-type
+    padding-left: $padding-default
+
+  td:last-of-type,
+  th:last-of-type
+    padding-right: $padding-default
+
   td,
   th
     margin: 0
@@ -31,7 +39,6 @@
     tr
       background: $background-color-panel
       border-top: 1px solid $border-color-light
-      border-bottom: 1px solid $border-color-light
 
       vertical-align: middle
       color: $black-light
@@ -57,13 +64,17 @@
 
 .panel-table.panel-table-key-pair
   table-layout: fixed
-  margin-top: $padding-sm
-  margin-bottom: $padding-sm
+  margin-top: 0
+  margin-bottom: 0
+
+  tr
+    border-top: 1px solid $border-color-light
+    vertical-align: top
 
   td,
   th
-    padding-top: $padding-ex-sm
-    padding-bottom: $padding-ex-sm
+    padding-top: $padding-sm
+    padding-bottom: $padding-sm
 
   td:first-of-type,
   th:first-of-type
@@ -72,15 +83,17 @@
 
     width: 35%
     font-weight: 400
-    text-align: right
-    color: $silver
+    text-align: left
+    color: $black-light
 
   td:nth-of-type(2),
   th:nth-of-type(2)
     padding-right: $padding-default
     padding-left: $padding-sm
 
-  tr
-    border-top: 0
-    border-bottom: 0
-    vertical-align: top
+    text-align: right
+    color: $black
+
+  span.description
+    font-size: $font-size-default - 0.0625rem
+    color: $silver
