refactoring driver code

--- a/app/frontend/styles/components/panels/table.styl
+++ b/app/frontend/styles/components/panels/table.styl
@@ -1,3 +1,7 @@
+@import '~Styles/global/colors'
+@import '~Styles/global/layout'
+@import '~Styles/global/type'
+
 .panel-table
   width: 100%
   position: relative
