--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -79,14 +79,14 @@ h6.input-label
   color: $text-color-light
 
 .input-field
-  height: $input-height
+  // height: $input-height
   margin: $input-margin-x 0
   padding: $padding-sm
   position: relative
 
   background-color: $background-color-input
   border-radius: 0.125rem
-  border: 1px solid $border-color-input
+  border: 0.0625rem solid $border-color-input
 
   cursor: pointer
   text-align: left
