--- a/app/views/public/emails/customer.slim
+++ b/app/views/public/emails/customer.slim
@@ -1,7 +1,7 @@
 = "Hi #{@email.fetch(:name_first)},"
 <br/>
 <br/>
-= "Thank you for making reservation with us. Your confirmation number is #{@email.fetch(:confirmation_number)} for your rental from #{format_date_time(@email.fetch(:pickup))} to #{format_date_time(@email.fetch(:drop_off))}."
+= "Thank you for making reservation with us. Your confirmation number is #{@email.fetch(:confirmation_number)} for your rental from #{format_time(@email.fetch(:pickup))} to #{format_time(@email.fetch(:drop_off))}."
 <br/>
 <br/>
 = "To save time at pickup, please have your drivers license, insurance policy card, and credit card ready. If you have any questions, please feel free to reach out at (909) 318-0450 or samay@gimmecar.com."
