--- a/app/views/layouts/admin.slim
+++ b/app/views/layouts/admin.slim
@@ -2,7 +2,7 @@ doctype html
 html#bg-app
   head
     title GimmeCar
-    = stylesheet_link_tag 'application', :media => 'all'
+    = stylesheet_link_tag 'application', media: 'all'
     = stylesheet_link_tag 'admin'
     meta(name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0')
     meta(name='apple-touch-icon' content='apple-touch-icon.png')
