--- a/app/views/layouts/public.slim
+++ b/app/views/layouts/public.slim
@@ -3,7 +3,7 @@ html
   head
     title GimmeCar - 24 / 7 Car Rental
     meta(name='description' content='24 / 7 car rental serving the High Desert and Inland Empire')
-    = stylesheet_link_tag 'application', :media => 'all'
+    = stylesheet_link_tag 'application', media: 'all'
     = stylesheet_link_tag 'public/landing'
     meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0")
     link(href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet')
