stripe element input height fixed

--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -101,6 +101,9 @@ h6.input-label
   &::placeholder,
     color: $text-color-placeholder
 
+.input-field.StripeElement
+  height: $input-height
+
 .input-field:disabled,
 .input-field.disabled,
 .input-field.disabled:focus
