--- a/app/assets/stylesheets/basecoat/_base.sass
+++ b/app/assets/stylesheets/basecoat/_base.sass
@@ -152,79 +152,79 @@ div
   margin: 0 auto
 
 // Margins & Paddings
-.margin-default
+.m-default
   margin: $margin-default
 
-.padding-default
+.p-default
   padding: $padding-default
 
-.margin-sm
+.m-sm
   margin: $margin-sm
 
-.padding-sm
+.p-sm
   padding: $padding-sm
 
-.margin-top-ex-sm
+.mt-ex-sm
   margin-top: $margin-ex-sm
 
-.margin-top-sm
+.mt-sm
   margin-top: $margin-sm
 
-.margin-top-default
+.mt-default
   margin-top: $margin-default
 
-.margin-top-lg
+.mt-lg
   margin-top: $margin-lg
 
-.margin-top-ex-lg
+.mt-ex-lg
   margin-top: $margin-ex-lg
 
-.margin-left-ex-sm
+.ml-ex-sm
   margin-left: $margin-ex-sm !important
 
-.margin-left-sm
+.ml-sm
   margin-left: $margin-sm
 
-.margin-left-default
+.ml-default
   margin-left: $margin-default
 
-.margin-right-default
+.mr-default
   margin-right: $margin-default
 
-.padding-left-default
+.pl-default
   padding-left: $padding-default
 
-.padding-left-sm
+.pl-sm
   padding-left: $padding-sm
 
-.margin-bottom-default
+.mb-default
   margin-bottom: $margin-default !important
 
-.padding-bottom-default
+.pb-default
   padding-bottom: $padding-default
 
-.margin-bottom-lg
+.mb-lg
   margin-bottom: $margin-lg
 
-.margin-bottom-sm
+.mb-sm
   margin-bottom: $margin-sm
 
-.margin-right-sm
+.mr-sm
   margin-right: $margin-sm !important
 
-.padding-right-sm
+.pr-sm
   padding-right: $padding-sm !important
 
-.padding-top-sm
+.pt-sm
   padding-top: $padding-sm
 
-.padding-top-default
+.pt-default
   padding-top: $padding-default
 
-.padding-top-lg
+.pt-lg
   padding-top: $padding-lg
 
-.margin-auto
+.m-auto
   margin: auto
 
 // Floats
