--- a/app/views/public/landing/index.slim
+++ b/app/views/public/landing/index.slim
@@ -12,7 +12,7 @@
 
 .container
   #fleet.landing-page-section
-    h4.margin-bottom-sm Our Fleet
+    h4.mb-sm Our Fleet
     p Our fleet of cars come with back-up camera, bluetooth, and USB and axuiliary inputs for a safe and comfortable trip.
     = image_tag('toyota_corolla.png', name: 'GimmeCar Rental Fleet')
 
