--- a/app/views/public/landing/r.slim
+++ b/app/views/public/landing/r.slim
@@ -3,17 +3,17 @@
     h1.logo.left GimmeCar
     h4.right.text-light Invoice
 
-  .whole.margin-top-default
+  .whole.mt-default
     b.text-light Prepared For:
     h4 Jay Patel
 
-  .whole.margin-top-default.rental-invoice-summary
+  .whole.mt-default.rental-invoice-summary
     h4.invoice-one-line We appreicate your business!
     p Thanks for being a customer. A detailed summary of your invoice is below. If you have any questions, we are happy to help. Email support@gimmecar.com or call 909.318.0450.
     h4.invoice-one-line
 
-  .rental-invoice-summary.input-block.whole.margin-top-lg
-    h4.margin-bottom-sm Rental Details
+  .rental-invoice-summary.input-block.whole.mt-lg
+    h4.mb-sm Rental Details
     ul.left.whole.list-no-style
       li
         | Rental Number:&nbsp;
@@ -35,7 +35,7 @@
         | Drop Off:&nbsp;
         b 3/15/2017 @ 10:00 PM
 
-    h4.margin-bottom-sm Rates
+    h4.mb-sm Rates
     ul.left.whole.list-no-style
       li
         span.left 3/14/2017
@@ -44,7 +44,7 @@
         span.left 3/15/2017
         span.right $90.00
 
-    h4.margin-bottom-sm Add-ons
+    h4.mb-sm Add-ons
     ul.left.whole.list-no-style
       li
         span.left Rental Collision Protection ($20 / day)
@@ -53,11 +53,11 @@
         span.left Gas - Prepaid (21 Gallons)
         span.right $58.17
 
-    h4.invoice-one-line.margin-bottom-default
+    h4.invoice-one-line.mb-default
       span.left Subtotal:
       span.right $278.17
 
-    h4.margin-bottom-sm.margin-top-sm Taxes & Fees
+    h4.mb-sm.mt-sm Taxes & Fees
     ul.left.whole.list-no-style
       li
         span.left Sales (8%)
