--- a/app/assets/stylesheets/basecoat/_normalize.scss
+++ b/app/assets/stylesheets/basecoat/_normalize.scss
@@ -297,7 +297,7 @@ select { /* 1 */
  */
 
 button,
-html [type="button"], /* 1 */
+[type="button"], /* 1 */
 [type="reset"],
 [type="submit"] {
   -webkit-appearance: button; /* 2 */
