--- a/app/frontend/styles/components/panels/table.styl
+++ b/app/frontend/styles/components/panels/table.styl
@@ -86,8 +86,13 @@
     padding-right: $padding-sm
 
     width: 35%
-    font-weight: 400
     text-align: left
+
+  th:first-of-type
+    color: $black
+
+  td:first-of-type
+    font-weight: 400
     color: $black-light
 
   td:nth-of-type(2),
