driver show page created

--- a/app/assets/stylesheets/basecoat/_type.sass
+++ b/app/assets/stylesheets/basecoat/_type.sass
@@ -1,6 +1,9 @@
 @import "global/colors"
 @import "global/type"
 
+.font-mono
+  font-family: $mono-font, serif
+
 .text-danger
   color: $text-color-red
 
