--- a/app/frontend/styles/components/panels/table.styl
+++ b/app/frontend/styles/components/panels/table.styl
@@ -88,19 +88,18 @@
     width: 35%
     text-align: left
 
-  th:first-of-type
-    color: $black
-
   td:first-of-type
     font-weight: 400
     color: $black-light
 
-  td:nth-of-type(2),
+  td:nth-of-type(2)
   th:nth-of-type(2)
     padding-right: $padding-default
     padding-left: $padding-sm
 
     text-align: right
+
+  td:nth-of-type(2)
     color: $black
 
   span.description
