--- a/app/frontend/styles/global/colors.styl
+++ b/app/frontend/styles/global/colors.styl
@@ -47,6 +47,9 @@ $background-color-input          = $white
 $background-color-input-disabled = $background-color-app
 $background-color-input-contrast = #f7f8f9
 
+$background-color-male           = #1f8bc9
+$background-color-female         = #e36fab
+
 // BORDER COLOR
 $border-color-red            = darken($red, 15%)
 $border-color-yellow         = darken($yellow, 5%)
