google analytics added to public site

--- a/app/views/layouts/public.slim
+++ b/app/views/layouts/public.slim
@@ -11,6 +11,16 @@ html
 
     = csrf_meta_tag
 
+    script(async src='https://www.googletagmanager.com/gtag/js?id=UA-116495367-1')
+    javascript:
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-116495367-1');
+
+
+
   body(lang='en')
     header
       .container
