--- a/app/assets/stylesheets/components/_buttons.sass
+++ b/app/assets/stylesheets/components/_buttons.sass
@@ -4,7 +4,8 @@
   position: relative
   height: $input-height
   padding: 0 $padding-sm
-  display: inline-block
+  display: flex
+  align-items: center
 
   font-weight: 700
   font-size: $font-size-default
@@ -31,7 +32,7 @@
 
 .btn[disabled]
   cursor: not-allowed
-  opacity: 0.6
+  opacity: 0.725
 
 .btn-group
   .btn
