return deposit form/controller created, not fully implemented

--- a/app/assets/stylesheets/basecoat/_base.sass
+++ b/app/assets/stylesheets/basecoat/_base.sass
@@ -11,7 +11,7 @@ body
   height: 100vh
   width: 100%
 
-  font-family: "Lato", sans-serif
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif
   -webkit-font-smoothing: antialiased
   font-size: 100%
 
@@ -88,13 +88,13 @@ dd
 // --------------------------------------------------
 tt,
 code
-  font-family: $mono-font
+  font-family: $font-mono
   font-size: 0.75rem
 
 pre
   margin-top: 0
   margin-bottom: 0
-  font: 0.75rem $mono-font
+  font: 0.75rem $font-mono
 
 // Address
 address
