--- a/app/assets/stylesheets/basecoat/_type.sass
+++ b/app/assets/stylesheets/basecoat/_type.sass
@@ -2,7 +2,7 @@
 @import "global/type"
 
 .font-mono
-  font-family: $mono-font, serif
+  font-family: $font-mono, serif
 
 .text-danger
   color: $text-color-red
@@ -27,7 +27,7 @@ svg.text-success
 
 .logo
   font-size: 1.5rem
-  font-weight: 900
+  font-weight: 700
   margin: 0
 
   small
