--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -91,7 +91,7 @@ h6.input-label
   cursor: pointer
   text-align: left
   font-size: 0.75rem
-  font-family: "Hack"
+  font-family: $font-mono
   font-weight: 400
   color: $black
 
@@ -242,7 +242,7 @@ input.input-range
 
   text-align: left
   font-size: 0.75rem
-  font-weight: 700
+  font-weight: 600
   color: #444444
 
 .input-error-message:empty
