--- a/app/assets/stylesheets/global/_colors.sass
+++ b/app/assets/stylesheets/global/_colors.sass
@@ -40,7 +40,7 @@ $background-color-blue: lighten($blue, 44%)
 $background-color-page: $white
 $background-color-footer: #0d051a
 $background-color-panel: $white
-$background-color-app: #f9f9fc
+$background-color-app: #f7f8f9
 $background-color-header: $white
 $background-color-contrast: $background-color-app
 $background-color-input: $white
