--- a/app/assets/stylesheets/public/_nav.sass
+++ b/app/assets/stylesheets/public/_nav.sass
@@ -4,12 +4,10 @@ header
 
   line-height: $input-height
 
-  h1
+  h1.logo
     float: left
-    font-size: 1.5rem
-    font-weight: 900
 
-  h1,
+  h1.logo,
   nav
     margin: $margin-sm 0
 
