--- a/app/assets/stylesheets/components/_buttons.sass
+++ b/app/assets/stylesheets/components/_buttons.sass
@@ -6,11 +6,11 @@
   padding: 0 $padding-sm
   display: flex
   align-items: center
+  justify-content: center
 
   font-weight: 700
   font-size: $font-size-default
   line-height: $input-height - 0.125rem
-  text-align: center
   cursor: pointer
   color: $black-light
 
