--- a/app/frontend/styles/components/panels/table.styl
+++ b/app/frontend/styles/components/panels/table.styl
@@ -72,8 +72,10 @@
       background: $background-color-panel
 
   tfoot
+    border-top: 0.1875rem double $border-color-panel
+
     tr
-      border-top: 0.1875rem solid $border-color-panel
+      border-top: 1px solid $border-color-light
 
     td
       font-weight: 700
