public page minor design changes

--- a/app/views/layouts/public.slim
+++ b/app/views/layouts/public.slim
@@ -31,7 +31,7 @@ html
         nav
           ul
             li
-              a.btn.btn-purple.btn-sm(href="tel:9093180450") 909-318-0450
+              a.btn.btn-purple(href="tel:9093180450") 909-318-0450
 
     #landing
       == yield
@@ -40,7 +40,7 @@ html
       .container
         #footer-content
           .one-half
-            h4 Locations
+            h4 Pickup / Drop-Off
             dl
               dt Adelanto, CA - California Inn
               address
