--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -104,37 +104,6 @@ h6.input-label
 .input-field.StripeElement
   height: $input-height
 
-.input-field:disabled,
-.input-field.disabled,
-.input-field.disabled:focus
-  background: $background-color-input-disabled
-  border: 1px solid $border-color-input
-  box-shadow: 0 0 0 0
-
-  color: $black
-  cursor: not-allowed
-
-.input-field:focus,
-.input-field.focus,
-.StripeElement--focus,
-.input-field.input-contrast:focus,
-.input-contrast .input-field:focus,
-.input-contrast .input-field.focus
-  z-index: 2
-  border-color: $purple
-  background-color: $white
-  box-shadow: 0 0 0 0.125rem lighten($purple, 30%)
-
-.input-field.input-contrast,
-.input-contrast .input-field
-  border-color: $border-color-input-contrast
-  background-color: $background-color-input-contrast
-
-.input-field.input-lg,
-.input-lg .input-field
-  height: $input-height-lg
-  font-size: $font-size-default
-
 .input-field,
 .input-range,
 input[type=number]::-webkit-inner-spin-button,
@@ -204,6 +173,39 @@ input.input-range
     cursor: pointer
 
     -webkit-appearance: none
+
+.input-field:disabled,
+input[type=checkbox].input-field:disabled,
+input[type=radio].input-field:disabled,
+.input-field.disabled,
+.input-field.disabled:focus
+  background: $background-color-input-disabled
+  border: 1px solid $border-color-input
+  box-shadow: 0 0 0 0
+
+  color: $black
+  cursor: not-allowed
+
+.input-field:focus,
+.input-field.focus,
+.StripeElement--focus,
+.input-field.input-contrast:focus,
+.input-contrast .input-field:focus,
+.input-contrast .input-field.focus
+  z-index: 2
+  border-color: $purple
+  background-color: $white
+  box-shadow: 0 0 0 0.125rem lighten($purple, 30%)
+
+.input-field.input-contrast,
+.input-contrast .input-field
+  border-color: $border-color-input-contrast
+  background-color: $background-color-input-contrast
+
+.input-field.input-lg,
+.input-lg .input-field
+  height: $input-height-lg
+  font-size: $font-size-default
 
 .input-field.input-field-error,
 .input-field[type='checkbox'].input-field-error,
