--- a/app/views/errors/error.slim
+++ b/app/views/errors/error.slim
@@ -8,7 +8,7 @@ html
     = stylesheet_link_tag 'errors'
     = stylesheet_link_tag 'modules/mobile'
     meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0")
-    link(href='//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css' rel='stylesheet')
+    link(href='//cdn.jsdelivr.net/npm/hack-font@3/build/web/hack.css' rel='stylesheet')
 
   body
     .error-container
