--- a/app/views/layouts/admin.slim
+++ b/app/views/layouts/admin.slim
@@ -15,7 +15,7 @@ html#bg-app
     meta(name='msapplication-navbutton-color' content='#f5f7f9')
     <!-- iOS Safari -->
     meta(name='apple-mobile-web-app-status-bar-style' content='#f5f7f9')
-    link(href='//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css' rel='stylesheet')
+    link(href='//cdn.jsdelivr.net/npm/hack-font@3/build/web/hack.css' rel='stylesheet')
 
     = csrf_meta_tag
 
