--- a/app/views/layouts/public.slim
+++ b/app/views/layouts/public.slim
@@ -6,7 +6,7 @@ html
     = stylesheet_link_tag 'application', media: 'all'
     = stylesheet_link_tag 'public/landing'
     meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0")
-    link(href='//cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css' rel='stylesheet')
+    link(href='//cdn.jsdelivr.net/npm/hack-font@3/build/web/hack.css' rel='stylesheet')
 
     = csrf_meta_tag
 
