major changed to how form gets submitted

--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -102,6 +102,7 @@ h6.input-label
     color: $text-color-placeholder
 
 .input-field.StripeElement
+.input-field[type=file]
   height: $input-height
 
 .input-field,
