--- a/app/views/admin/index.slim
+++ b/app/views/admin/index.slim
@@ -1,8 +1,8 @@
 - if @location
   javascript:
-    window.location_name = "#{@location.name}";
+    window.locationName = "#{@location.name}";
 - else
   javascript:
-    window.location_name = null;
+    window.locationName = null;
 
 = javascript_pack_tag 'admin'
