style updates, vehicle status during rental

--- a/app/frontend/styles/components/panels/table.styl
+++ b/app/frontend/styles/components/panels/table.styl
@@ -32,7 +32,7 @@
     color: $black-ex-light
     font-size: 0.6875rem
     text-transform: uppercase
-    border-top: 1px solid $border-color-light
+    border-top: 0
     border-bottom: 1px solid $border-color-light
 
     th
@@ -40,8 +40,10 @@
 
   tbody
     td.checkbox
-      padding-right: 0
       width: 1rem + $padding-sm
+
+    td.status
+      padding-right: 0
 
     tr
       background: $background-color-panel
