--- a/app/assets/stylesheets/components/_panels.sass
+++ b/app/assets/stylesheets/components/_panels.sass
@@ -11,7 +11,7 @@
   background-color: $background-color-panel
 
 .panel-base
-  box-shadow: 0 0.375rem 0.5rem rgba(102, 119, 136, .03), 0 0.0625rem 0.125rem rgba(102, 119, 136, .2)
+  box-shadow: 0 0.375rem 0.5rem rgba(102, 119, 136, .03), 0 0.0625rem 0.125rem rgba(102, 119, 136, .1), 0 -0.0625rem 0.0625rem rgba(102, 119, 136, .03)
   border: 0
 
 .panel-padding
