minor UI/UX improvements

--- a/app/assets/stylesheets/components/_flash.sass
+++ b/app/assets/stylesheets/components/_flash.sass
@@ -6,7 +6,7 @@
   margin-bottom: $margin-sm
 
   border: 1px solid $border-color-panel
-  border-radius: 0.125rem
+  border-radius: $border-radius-default
   background: $background-color-panel
 
   font-size: $font-size-default
