--- a/app/assets/stylesheets/global/_layout.sass
+++ b/app/assets/stylesheets/global/_layout.sass
@@ -15,8 +15,12 @@ $padding-default: $margin-default
 $padding-sm: $margin-sm
 $padding-ex-sm: $margin-ex-sm
 
+$border-radius-default: 0.125rem
+
 $input-height: 2.25rem
 $input-height-sm: 2rem
 $input-height-lg: 2.75rem
 $input-padding-y: $padding-ex-sm/2
 $input-margin-x: $margin-ex-sm/2
+$input-border-radius: $border-radius-default
+$input-font-size: 0.75rem
