--- a/app/assets/stylesheets/components/_buttons.sass
+++ b/app/assets/stylesheets/components/_buttons.sass
@@ -14,7 +14,7 @@
   cursor: pointer
   color: $black-light
 
-  border-radius: 0.125rem
+  border-radius: $border-radius-default
   border: 0.0625rem solid $border-color-dark
   background: #fbfbfb
   -webkit-appearance: none
@@ -47,13 +47,13 @@
       z-index: 2
 
   .btn:first-of-type
-    border-top-left-radius: 0.125rem
-    border-bottom-left-radius: 0.125rem
+    border-top-left-radius: $border-radius-default
+    border-bottom-left-radius: $border-radius-default
     margin-left: 0
 
   .btn:last-of-type
-    border-top-right-radius: 0.125rem
-    border-bottom-right-radius: 0.125rem
+    border-top-right-radius: $border-radius-default
+    border-bottom-right-radius: $border-radius-default
 
 .btn.btn-full
   width: 100%
