--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -85,12 +85,12 @@ h6.input-label
   position: relative
 
   background-color: $background-color-input
-  border-radius: 0.125rem
+  border-radius: $input-border-radius
   border: 0.0625rem solid $border-color-input
 
   cursor: pointer
   text-align: left
-  font-size: 0.75rem
+  font-size: $input-font-size
   font-family: $font-mono
   font-weight: 400
   color: $black
@@ -124,14 +124,14 @@ select.input-field
 
 input[type=checkbox].input-field,
 input[type=radio].input-field
-  height: $input-height - 1rem
-  width: $input-height - 1rem
-  margin: ($input-margin-x + 0.5rem) 0
+  height: $input-height - 1.25rem
+  width: $input-height - 1.25rem
+  margin: ($input-margin-x + 0.625rem) 0
   padding: 0
   position: relative
 
   background-color: $background-color-input
-  border-radius: 0.125rem
+  border-radius: $input-border-radius
   border: 1px solid $border-color-input
   color: $background-color-input
 
@@ -161,7 +161,7 @@ input.input-range
     height: 0.5rem
     cursor: pointer
     background: $border-color-light
-    border-radius: 0.125rem
+    border-radius: $input-border-radius
 
   &::-webkit-slider-thumb
     height: 1.5rem
@@ -169,7 +169,7 @@ input.input-range
     margin-top: -(1.5rem/2 - 0.25rem)
 
     border: 0.0625rem solid $border-color-input
-    border-radius: 0.125rem
+    border-radius: $input-border-radius
     background: $white
     cursor: pointer
 
@@ -208,6 +208,7 @@ input[type=radio].input-field:disabled,
   height: $input-height-lg
   font-size: $font-size-default
 
+.panel-input.input-field-error,
 .input-field.input-field-error,
 .input-field[type='checkbox'].input-field-error,
 .input-field[type='radio'].input-field-error,
@@ -239,12 +240,12 @@ input[type=radio].input-field:disabled,
 
   border: 1px solid $border-color-yellow
   border-top: 0
-  border-bottom-left-radius: 0.125rem
-  border-bottom-right-radius: 0.125rem
+  border-bottom-left-radius: $input-border-radius
+  border-bottom-right-radius: $input-border-radius
   background-color: $background-color-yellow
 
   text-align: left
-  font-size: 0.75rem
+  font-size: $input-font-size
   font-weight: 600
   color: #444444
 
@@ -262,7 +263,7 @@ input[type=radio].input-field:disabled,
   padding: $padding-ex-sm
 
   border: 0
-  border-radius: 0.125rem
+  border-radius: $input-border-radius
   background-color: $red
 
   font-size: $font-size-default
