--- a/app/assets/stylesheets/public/landing.sass
+++ b/app/assets/stylesheets/public/landing.sass
@@ -46,7 +46,7 @@
 #billboard-reservation-inputs
   max-width: 45rem
   margin: 0 auto
-  border-radius: 0.125rem
+  border-radius: $input-border-radius
   position: relative
 
 #rental-details,
