--- a/app/frontend/styles/global/layout.styl
+++ b/app/frontend/styles/global/layout.styl
@@ -15,8 +15,12 @@ $padding-default = $margin-default
 $padding-sm = $margin-sm
 $padding-ex-sm = $margin-ex-sm
 
+$border-radius-default = 0.125rem
+
 $input-height = 2.125rem
 $input-height-sm = 1.75rem
 $input-height-lg = 2.5rem
 $input-padding-y = $padding-ex-sm/2
 $input-margin-x = $margin-ex-sm/2
+$input-border-radius = $border-radius-default
+$input-font-size = 0.75rem
