--- a/app/frontend/styles/components/panels/table.styl
+++ b/app/frontend/styles/components/panels/table.styl
@@ -33,7 +33,7 @@
     font-size: 0.6875rem
     text-transform: uppercase
     border-top: 0
-    border-bottom: 1px solid $border-color-light
+    border-bottom: 0
 
     th
       font-weight: 600
@@ -87,10 +87,8 @@
   tr
     vertical-align: top
 
-  tbody,
-  thead
-    tr
-      border-top: 1px solid $border-color-light
+  tbody tr
+    border-top: 1px solid $border-color-light
 
   td,
   th
