--- a/app/frontend/styles/global/colors.styl
+++ b/app/frontend/styles/global/colors.styl
@@ -17,6 +17,7 @@ $silver-ex-light = #c0ccda
 $gray            = #d3dce6
 $gray-light      = #e5e9f2
 $gray-ex-light   = #eff2f7
+$white-ex-dark   = #f6f7fa
 $white-dark      = #f9fafc
 $white           = #ffffff
 
