input error style moved to webpack

--- a/app/frontend/styles/components/inputs/table.styl
+++ b/app/frontend/styles/components/inputs/table.styl
@@ -61,7 +61,7 @@
         cursor: pointer
 
     tr.selected
-      font-weight: 600
+      background: lighten($purple-light, 93%)
 
     td.checkbox
       width: 1rem + $padding-sm
