--- a/app/frontend/styles/global/colors.styl
+++ b/app/frontend/styles/global/colors.styl
@@ -17,6 +17,7 @@ $silver-ex-light = #c0ccda
 $gray            = #d3dce6
 $gray-light      = #e5e9f2
 $gray-ex-light   = #eff2f7
+$white-ex-dark   = #f6f7fa
 $white-dark      = #f9fafc
 $white           = #ffffff
 
@@ -33,7 +34,7 @@ $text-color-placeholder = #bbbbbb
 
 // BACKGROUND COLOR
 $background-color-red            = lighten($red, 38.5%)
-$background-color-yellow         = lighten($yellow, 41%)
+$background-color-yellow         = lighten($yellow, 95%)
 $background-color-green          = lighten($green, 47%)
 $background-color-blue           = lighten($blue, 44%)
 
