--- a/app/assets/stylesheets/components/_panels.sass
+++ b/app/assets/stylesheets/components/_panels.sass
@@ -6,13 +6,9 @@
   width: 100%
   margin-bottom: $margin-default
 
-  border: 1px solid $border-color-panel
+  border: 0.0625rem solid $border-color-panel
   border-radius: $border-radius-default
   background-color: $background-color-panel
-
-.panel-input
-  margin: $input-margin-x 0
-  border-color: $border-color-input
 
 .panel-base
   box-shadow: 0 0.375rem 0.5rem rgba(102, 119, 136, .03), 0 0.0625rem 0.125rem rgba(102, 119, 136, .1), 0 -0.0625rem 0.0625rem rgba(102, 119, 136, .03)
