refactored input css

--- a/app/assets/stylesheets/components/_inputs.sass
+++ b/app/assets/stylesheets/components/_inputs.sass
@@ -1,4 +1,3 @@
-.input-row,
 .input-submit,
 .input-label,
 .input-field
@@ -12,9 +11,9 @@
   padding-top: $padding-default
   padding-bottom: $padding-default
 
-.form-header,
 .input-block
   float: left
+  width: 100%
   padding-left: $input-padding-y
   padding-right: $input-padding-y
 
@@ -29,10 +28,8 @@
     flex: 1
 
 .input-label
-  padding-top: $padding-sm
-  padding-left: $input-padding-y
-  padding-right: $input-padding-y
   margin: 0
+  padding-top: $padding-sm
 
   font-size: 0.8125rem
   font-weight: 700
