--- a/app/views/public/landing/r.slim
+++ b/app/views/public/landing/r.slim
@@ -12,7 +12,7 @@
     p Thanks for being a customer. A detailed summary of your invoice is below. If you have any questions, we are happy to help. Email support@gimmecar.com or call 909.318.0450.
     h4.invoice-one-line
 
-  .rental-invoice-summary.input-block.whole.mt-lg
+  .rental-invoice-summary.input-block.mt-lg
     h4.mb-sm Rental Details
     ul.left.whole.list-no-style
       li
