option to choose source when extending rental

--- a/app/frontend/styles/components/inputs/table.styl
+++ b/app/frontend/styles/components/inputs/table.styl
@@ -13,6 +13,9 @@
   font-size: $input-font-size
   font-weight: 400
 
+  .text-nowrap
+    white-space: nowrap
+
   tr
     border-bottom: 1px solid $border-color-light
 
