--- a/app/frontend/styles/global/colors.styl
+++ b/app/frontend/styles/global/colors.styl
@@ -7,6 +7,7 @@ $blue-dark       = #1d8ce0
 $purple-light    = #7795f8
 $purple          = #476af7
 $purple-dark     = #2645da
+$brown           = #ab713f
 
 $black           = #1f2d3d
 $black-light     = #324057
