--- a/app/views/admin.slim
+++ b/app/views/admin.slim
@@ -1,7 +1,7 @@
 doctype html
 html#bg-app
   head
-    title GimmeCar | Command
+    title GimmeCar
     = stylesheet_link_tag 'application', media: 'all'
     = stylesheet_link_tag 'admin'
     meta(name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0')
@@ -22,6 +22,12 @@ html#bg-app
   body(lang='en')
     #gimmecar-app
 
-    == yield
+    - if @location
+      javascript:
+        window.locationName = "#{@location.name}";
+    - else
+      javascript:
+        window.locationName = null;
 
+    = javascript_pack_tag 'admin'
     = render 'shared/stripe'
