--- a/app/views/public/landing/index.slim
+++ b/app/views/public/landing/index.slim
@@ -28,6 +28,9 @@
       dt How much is the deposit?
       dd We hold a $200 deposit.
 
+      dt How long do you keep the deposit for?
+      dd We return the deposit within 24 hours of returning the vehicle after full inspection is conducted. We’ll submit any refund to your bank immediately. However, it make take anywhere up to ten business days for your customers bank to process the refund and for the funds to be returned to the account.
+
       dt Is insurance required?
       dd Yes! You will need both liability and collision coverage that transfers over to a rental vehicle.
 
